--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -7,11 +7,11 @@ comments: "false"
 ---
 <link rel="stylesheet" href="./ins.css">
 <div class="photos-btn-wrap">
-	<a class="photos-btn active" href="javascript:void(0)">Ins</a>
-	<a class="photos-btn" target="_blank" href="http://litten.me/gallery/">摄影</a>
+	<a class="photos-btn active" href="javascript:void(0)">Photos</a>
+	<a class="photos-btn" href="#">待续</a>
 </div>
 <div class="instagram itemscope">
-	<a href="https://www.instagram.com/litten225/" target="_blank" class="open-ins">图片来自instagram，正在加载中…</a>
+	<a href="https://boredliam.github.io/" target="_blank" class="open-ins">图片正在加载中…</a>
 </div>
 <script>
   (function() {
